--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 data/*
 twitter_dataset/*
+output_twitter/*
 OneDrive/data/*
 OneDrive/preprocess/twitter/cleaned/big/*
 OneDrive/preprocess/twitter/cleaned/small/*
